--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Vitor Pamplona",
   "license": "MIT",
   "dependencies": {
+    "base32url": "^0.0.3",
     "crypto-js": "^4.0.0",
     "elliptic": "^6.5.4",
     "hi-base32": "^0.5.0",
