--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "webpack": "webpack --config webpack.config.js"
   },
   "author": "Vitor Pamplona",
-  "license": "MIT",
+  "license": "GPL-3.0-only",
   "dependencies": {
     "base32url": "^0.0.3",
     "crypto-js": "^4.0.0",
