--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "GPL-3.0-only",
   "dependencies": {
     "base32url": "^0.0.3",
+    "cross-fetch": "^3.1.4",
     "crypto-js": "^4.0.0",
     "elliptic": "^6.5.4",
+    "esm": "^3.2.25",
     "hi-base32": "^0.5.0",
     "sha256": "^0.2.0"
   },
