--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "cross-fetch": "^3.1.4",
     "crypto-js": "^4.0.0",
     "elliptic": "^6.5.4",
-    "esm": "^3.2.25",
-    "hi-base32": "^0.5.0",
-    "sha256": "^0.2.0"
+    "esm": "^3.2.25"
   },
   "devDependencies": {
     "jest": "^26.6.3",
