--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   "dependencies": {
     "base32url": "^0.0.3",
     "cross-fetch": "^3.1.4",
-    "crypto-js": "^4.0.0",
     "elliptic": "^6.5.4",
     "esm": "^3.2.25"
   },
   "devDependencies": {
     "jest": "^26.6.3",
     "webpack": "^4.44.1",
-    "webpack-cli": "^4.6.0"
+    "webpack-cli": "^4.6.0",
+    "webpack-visualizer-plugin": "^0.1.11"
   }
 }
