--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "devDependencies": {
     "jest": "^26.6.3",
     "webpack": "^4.44.1",
-    "webpack-cli": "^4.6.0",
-    "webpack-visualizer-plugin": "^0.1.11"
+    "webpack-cli": "^4.6.0"
   }
 }
