moving tests from jest to mocha

--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.3",
   "description": "Verifiable QR SDK for PathCheck's URI DataModels",
   "main": "lib/index.js",
+  "module": "lib/main.js",
   "scripts": {
-    "test": "jest",
+    "test": "mocha",
     "webpack": "webpack --config webpack.config.js"
   },
   "author": "Vitor Pamplona",
@@ -16,7 +17,8 @@
     "esm": "^3.2.25"
   },
   "devDependencies": {
-    "jest": "^26.6.3",
+    "chai": "^4.3.4",
+    "mocha": "^8.4.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^4.6.0"
   }
