--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pathcheck/pcf-sdk",
+  "name": "@pathcheck/cred-sdk",
   "version": "0.0.3",
   "description": "Verifiable QR SDK for PathCheck's URI DataModels",
   "main": "lib/index.js",
