--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
   "author": "Vitor Pamplona",
   "license": "GPL-3.0-only",
   "dependencies": {
-    "base32url": "^0.0.3",
+    "asn1.js": "^5.4.1",
+    "base32url": "^0.0.5",
     "cross-fetch": "^3.1.4",
     "elliptic": "^6.5.4",
     "esm": "^3.2.25"
   },
   "devDependencies": {
     "chai": "^4.3.4",
-    "mocha": "^8.4.0",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^4.6.0"
+    "mocha": "^9.0.0",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.2"
   }
 }
