--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "asn1.js": "^5.4.1",
     "base32url": "^0.0.5",
+    "buffer": "^6.0.3",
     "cross-fetch": "^3.1.4",
     "elliptic": "^6.5.4",
     "esm": "^3.2.25"
