Adding entry point for react-native

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Verifiable QR SDK for PathCheck's URI DataModels",
   "main": "lib/index.js",
   "module": "lib/main.js",
+  "react-native": "lib/main.js",
   "scripts": {
     "test": "mocha",
     "webpack": "webpack --config webpack.config.js"
